# fasdmanager

./: Cargo.toml
.github/workflows/: rust.yml
data/: org.fasd.manager.desktop
src/: app.rs  main.rs
src/fs/: applications.rs  desktop_entry.rs  devices.rs  distro_detect.rs  entry.rs  mod.rs  ops.rs  package_owner.rs  package_uninstall.rs  progress_copy.rs  reader.rs  settings.rs  trash_ops.rs  xdg_dirs.rs
src/i18n/: mod.rs  strings_en.rs  strings_it.rs  strings_ru.rs  strings_zh.rs
src/ui/: app_state.rs  content_view.rs  copy_progress_dialog.rs  file_entry_object.rs  icon_widget.rs  mod.rs  settings_dialog.rs  sidebar.rs  tabs.rs  terminal_panel.rs  window.rs
src/util/: format.rs  icons.rs  mod.rs
