[package]
name = "fasdmanager"
version = "0.1.0"
edition = "2021"
description = "FileManager"
authors = ["FasdManager Contributors"]
license = "GPL-3.0-or-later"
default-run = "fasdmanager"

[[bin]]
name = "fasdmanager"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
gio = { version = "0.22" }
glib = { version = "0.22" }
gdk = { package = "gdk4", version = "0.11" }
gdk-pixbuf = { version = "0.22" }
pango = { version = "0.22" }
vte4 = "0.9"

walkdir = "2.5"
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
humansize = "2.1"
mime_guess = "2.0"
once_cell = "1.20"
libc = "0.2"
open = "5.3"
trash = "3"
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev]
opt-level = 0
debug = true
